--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,38 +55,54 @@ else()
     set(LIB_TYPE STATIC)
 endif()
 
-#Configure RPATH
-set(CMAKE_MACOSX_RPATH 1) #enable RPATH on OSX. This also suppress warnings on CMake >= 3.0
-# when building, don't use the install RPATH already
-# (but later on when installing)
-set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
-# set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
-#This is relative RPATH for libraries built in the same project
-#I assume that the directory is 
-# - install_dir/something for binaries
-# - install_dir/lib for libraries
-file(RELATIVE_PATH _rel_path "${CMAKE_INSTALL_PREFIX}/bin" "${CMAKE_INSTALL_PREFIX}/lib")
-if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
- set(CMAKE_INSTALL_RPATH "@loader_path/${_rel_path}")
-else()
- set(CMAKE_INSTALL_RPATH "\$ORIGIN/${_rel_path}")
+#### Settings for rpath
+if(${CMAKE_MINIMUM_REQUIRED_VERSION} VERSION_GREATER "2.8.12")
+    message(AUTHOR_WARNING "CMAKE_MINIMUM_REQUIRED_VERSION is now ${CMAKE_MINIMUM_REQUIRED_VERSION}. This check can be removed.")
 endif()
-# add the automatically determined parts of the RPATH
-# which point to directories outside the build tree to the install RPATH
-set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) #very important!
+if(NOT (CMAKE_VERSION VERSION_LESS 2.8.12))
+    if(NOT MSVC)
+        #add the option to disable RPATH
+        set(IDYNTREE_DISABLE_RPATH FALSE CACHE BOOL "Disable RPATH installation")
+        mark_as_advanced(IDYNTREE_DISABLE_RPATH)
+    endif()
 
-# the RPATH to be used when installing, but only if it's not a system directory
-#This is in the WIKI, but I don't understand its use.
-# list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/lib" isSystemDir)
-# if("${isSystemDir}" STREQUAL "-1")
-#    set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
-# endif("${isSystemDir}" STREQUAL "-1")
+    #Configure RPATH
+    set(CMAKE_MACOSX_RPATH 1) #enable RPATH on OSX. This also suppress warnings on CMake >= 3.0
+    # when building, don't use the install RPATH already
+    # (but later on when installing)
+    set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
+    #build directory by default is built with RPATH
+    set(CMAKE_SKIP_BUILD_RPATH  FALSE)
 
-if(IDYNTREE_DISABLE_RPATH)
-    set(CMAKE_SKIP_BUILD_RPATH TRUE)
-else(IDYNTREE_DISABLE_RPATH)
-    set(CMAKE_SKIP_BUILD_RPATH FALSE)
-endif(IDYNTREE_DISABLE_RPATH)
+    #This is relative RPATH for libraries built in the same project
+    #I assume that the directory is 
+    # - install_dir/something for binaries
+    # - install_dir/lib for libraries
+    file(RELATIVE_PATH _rel_path "${CMAKE_INSTALL_PREFIX}/bin" "${CMAKE_INSTALL_PREFIX}/lib")
+    if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+        set(CMAKE_INSTALL_RPATH "@loader_path/${_rel_path}")
+    else()
+        set(CMAKE_INSTALL_RPATH "\$ORIGIN/${_rel_path}")
+    endif()
+
+    # the RPATH to be used when installing, but only if it's not a system directory (copied form CMake File. To be tested)
+    list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/lib" isSystemDir)
+    if("${isSystemDir}" STREQUAL "-1")
+       set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+    endif("${isSystemDir}" STREQUAL "-1")
+
+    # add the automatically determined parts of the RPATH
+    # which point to directories outside the build tree to the install RPATH
+    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) #very important!
+
+    if(IDYNTREE_DISABLE_RPATH)
+        #what to do? disable RPATH altogether or just revert to the default CMake configuration?
+        #I revert to default
+        unset(CMAKE_INSTALL_RPATH) #remove install rpath
+        set(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE)
+    endif()
+endif()
+####end RPATH
 
 add_library(idyntree ${LIB_TYPE} ${folder_source} ${folder_header})
 
