Added bigman related test files

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,6 +5,8 @@ include_directories(${CMAKE_SOURCE_DIR}/include ${EIGEN3_INCLUDE_DIR} ${orocos_k
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/icub.urdf
                ${CMAKE_CURRENT_BINARY_DIR}/icub.urdf)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/test_files/bigman.urdf
+               ${CMAKE_CURRENT_BINARY_DIR}/bigman.urdf)
 add_executable(iDynTreeJacobianTest         iDynTreeJacobianTest.cpp)
 add_executable(iDynTreeRelativeJacobianTest iDynTreeRelativeJacobianTest.cpp)
 #add_executable(iDynTreeWholeBodyFTsensorEstimateTest iDynTreeWholeBodyFTsensorEstimateTest.cpp)
@@ -19,8 +21,10 @@ target_link_libraries(iDynTreeRelativeJacobianTest idyntree ${ICUB_LIBRARIES} ${
 #target_link_libraries(iDynTreeExternalWrenchesEstimationTest idyntree ${ICUB_LIBRARIES} ${orocos_kdl_LIBRARIES} ${kdl_codyco_LIBRARIES} )
 #target_link_libraries(iDynTreeCOM idyntree ${ICUB_LIBRARIES} ${kdl_codyco_LIBRARIES} )
 
-add_test(NAME test_iDynTreeJacobianTest COMMAND iDynTreeJacobianTest icub.urdf)
-add_test(NAME test_iDynTreeRelativeJacobianTest COMMAND iDynTreeRelativeJacobianTest icub.urdf)
+add_test(NAME test_iDynTreeJacobianTest                COMMAND iDynTreeJacobianTest         icub.urdf)
+add_test(NAME test_iDynTreeRelativeJacobianTest        COMMAND iDynTreeRelativeJacobianTest icub.urdf imu_frame)
+add_test(NAME test_iDynTreeRelativeJacobianTest_bigman COMMAND iDynTreeRelativeJacobianTest bigman.urdf imu_link)
+
 
 #add_test(NAME test_iDynTreeWholeBodyFTsensorEstimateTest COMMAND iDynTreeWholeBodyFTsensorEstimateTest)
 #add_test(NAME test_iDynTreeExternalWrenchesEstimationTest COMMAND iDynTreeExternalWrenchesEstimationTest)
