--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,8 @@ option(ENABLE_SYMORO_PAR "Enable support for SYMORO par input" TRUE)
 ## KDL::CoDyCo::TreeSerialization support
 option(ENABLE_SERIALIZATION_IO "Enable support for parsing and writing serialization (need kdl_codyco)" TRUE)
 
-option(KDL_FORMAT_IO_DISABLE_RPATH "Disable RPATH for the library" FALSE)
+option(KDL_FORMAT_IO_ENABLE_RPATH "Enable RPATH for the library" TRUE)
+mark_as_advanced(KDL_FORMAT_IO_ENABLE_RPATH)
 
 find_package(orocos_kdl 1.2.3 QUIET)
 if (NOT orocos_kdl_FOUND)
@@ -148,54 +149,14 @@ else()
     set(LIB_TYPE SHARED)
 endif()
 
-#### Settings for rpath
-if(${CMAKE_MINIMUM_REQUIRED_VERSION} VERSION_GREATER "2.8.12")
-    message(AUTHOR_WARNING "CMAKE_MINIMUM_REQUIRED_VERSION is now ${CMAKE_MINIMUM_REQUIRED_VERSION}. This check can be removed.")
-endif()
-if(NOT (CMAKE_VERSION VERSION_LESS 2.8.12))
-    if(NOT MSVC)
-        #add the option to disable RPATH
-        set(KDLFORMATIO_DISABLE_RPATH FALSE CACHE BOOL "Disable RPATH installation")
-        mark_as_advanced(KDLFORMATIO_DISABLE_RPATH)
-    endif()
+find_package(YCM REQUIRED)
+include(YCMDefaultDirs)
 
-    #Configure RPATH
-    set(CMAKE_MACOSX_RPATH 1) #enable RPATH on OSX. This also suppress warnings on CMake >= 3.0
-    # when building, don't use the install RPATH already
-    # (but later on when installing)
-    set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
-    #build directory by default is built with RPATH
-    set(CMAKE_SKIP_BUILD_RPATH  FALSE)
-
-    #This is relative RPATH for libraries built in the same project
-    #I assume that the directory is 
-    # - install_dir/something for binaries
-    # - install_dir/lib for libraries
-    file(RELATIVE_PATH _rel_path "${CMAKE_INSTALL_PREFIX}/bin" "${CMAKE_INSTALL_PREFIX}/lib")
-    if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-        set(CMAKE_INSTALL_RPATH "@loader_path/${_rel_path}")
-    else()
-        set(CMAKE_INSTALL_RPATH "\$ORIGIN/${_rel_path}")
-    endif()
-
-    # the RPATH to be used when installing, but only if it's not a system directory (copied form CMake File. To be tested)
-    list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/lib" isSystemDir)
-    if("${isSystemDir}" STREQUAL "-1")
-       set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
-    endif("${isSystemDir}" STREQUAL "-1")
-
-    # add the automatically determined parts of the RPATH
-    # which point to directories outside the build tree to the install RPATH
-    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE) #very important!
-
-    if(KDLFORMATIO_DISABLE_RPATH)
-        #what to do? disable RPATH altogether or just revert to the default CMake configuration?
-        #I revert to default
-        unset(CMAKE_INSTALL_RPATH) #remove install rpath
-        set(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE)
-    endif()
-endif()
-##### end RPATH
+include(AddInstallRPATHSupport)
+add_install_rpath_support(BIN_DIRS "${CMAKE_INSTALL_PREFIX}/bin"
+                          LIB_DIRS "${CMAKE_INSTALL_PREFIX}/lib"
+                          DEPENDS KDL_FORMAT_IO_ENABLE_RPATH
+                          USE_LINK_PATH)
 
 option(ENABLE_IKIN "Enable support for exporting iKin chains" FALSE)
 
