[travis] add some debug prints

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,9 @@ before_script:
   - cd ../..
   # deal with TinyXML linking problems
   - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/travis/build/robotology-playground/codyco-superbuild/build/install/lib
+  - ls /home/travis/build/robotology-playground/codyco-superbuild/build/install/lib
+  - echo $LD_LIBRARY_PATH
+  - ldconfig
   # Prepare iDynTree build
   - cd idyntree
   - mkdir build
