--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
   - sudo add-apt-repository -y ppa:kalakris/cmake
   - sudo apt-get update
   - sudo apt-get install -qq libeigen3-dev libboost-system-dev libboost-thread-dev libboost-test-dev
-  - sudo apt-get --force-yes install icub
+  - sudo apt-get --force-yes install icub-common
   - sudo apt-get install cmake
 
 before_script:
